--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -16,6 +16,8 @@ Facebook: <a href='https://www.facebook.com/mypoppyeu'>mypoppyeu</a><br><br>
 
 VAT/RC BE 0564.821.397<br>
 <a href='https://docs.my-poppy.eu/privacy_poppy.html'>Privacy</a><br>
-<a href='https://docs.my-poppy.eu/Poppy_Conditions%20generales.pdf'>Terms & conditions</a> (conditions générales - algemene voorwaarden)
+<a href='https://docs.my-poppy.eu/Poppy_Conditions%20generales.pdf'>Terms & conditions</a> (conditions générales - algemene voorwaarden)<br><br>
+The posts of the blog are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+
 
 <iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
