--- a/_pages/events_upcoming.html
+++ b/_pages/events_upcoming.html
@@ -4,6 +4,8 @@ permalink: /events_upcoming/
 ---
 Crisis & emergency management: upcoming events
 
+<iframe style="width:100%;" frameborder="0" scrolling="no" allowtransparency="allowtransparency" class="cibulFrame cbpgbdy" data-oabdy src="//openagenda.com/agendas/59570001/embeds/4004538/events?lang=fr" data-lang="fr"></iframe><script type="text/javascript" src="//openagenda.com/js/embed/cibulBodyWidget.js"></script>
+
 <div id="events2come" style='font-weight:normal;text-align:left'>
 </div>
 <br><a href='https://mypoppy.typeform.com/to/sww4k6' target='_blank' style='background:#cb732b; color:white; border-radius:5px;padding:10px'>Keep me up to date!</a>
