--- a/_pages/events_upcoming.html
+++ b/_pages/events_upcoming.html
@@ -5,9 +5,11 @@ permalink: /events_upcoming/
 Crisis & emergency management: upcoming events
 <br>
 <br>
-<div class="cbpgsc cibulSearch" data-oasc data-cbctl="59570001/4004538|fr" data-lang="fr"></div><script type="text/javascript" src="//openagenda.com/js/embed/cibulSearchWidget.js"></script>
+<!--div class="cbpgsc cibulSearch" data-oasc data-cbctl="59570001/4004538|fr" data-lang="fr"></div><script type="text/javascript" src="//openagenda.com/js/embed/cibulSearchWidget.js"></script>
 
-<iframe style="width:100%;" frameborder="0" scrolling="no" allowtransparency="allowtransparency" class="cibulFrame cbpgbdy" data-oabdy src="//openagenda.com/agendas/59570001/embeds/4004538/events?lang=fr" data-lang="fr"></iframe><script type="text/javascript" src="//openagenda.com/js/embed/cibulBodyWidget.js"></script>
+<iframe style="width:100%;" frameborder="0" scrolling="no" allowtransparency="allowtransparency" class="cibulFrame cbpgbdy" data-oabdy src="//openagenda.com/agendas/59570001/embeds/4004538/events?lang=fr" data-lang="fr"></iframe><script type="text/javascript" src="//openagenda.com/js/embed/cibulBodyWidget.js"></script-->
+
+<iframe  src="https://openagenda.com/poppy-evenements-externes"></iframe>
 
 <div id="events2come" style='font-weight:normal;text-align:left'>
 </div>
