--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -3,6 +3,7 @@ permalink: /presas/
 ---
 <b>Présentations</b> 
 <ul class='class_ul'>
+<li><a href=''><b>Outils numériques régaliens et solutions des GAFAM en gestion d’urgence collective : équilibre ou tension ?</b></a> (avec Valérie Velghe), Le Havre, novembre 2020 (en préparation)</li>	
 <li><a href="https://docs.my-poppy.eu/201904_secours_expo_QGIS.pdf"><b>QGIS pour les services de secours</b></a>, <a href="http://www.rescue-week.com/accueil.html">Rescue Week</a>, Paris, 6 avril 2019</li>
 <li><a href="https://docs.my-poppy.eu/201903_begeo_track_6_osgeo_christophe_cloquet.pdf"><b>Outils libres : aussi pour les entreprises !</b></a>, <a href='https://begeo2019.be/fr/track-6'>Be Geo 2019</a>, Bruxelles, 19 mars 2019</li>
 <li><a href='https://docs.my-poppy.eu/20181203_carto_101_charles_peguy_pour_diffusion.pdf'><b>Cartographie évènementielle</b></a> Institut Charles Péguy, Louvain-la-Neuve, décembre 2018</li>
@@ -29,8 +30,8 @@ permalink: /presas/
 <br>
 <b>Presse</b> 
 <ul>
-<li>2020-01-01 Outiller la gestion de crise ? Pourquoi, comment ? (revue Be Prepared - en préparation)</li>
-<li>2019-01-01 Vidéoconférence tout terrain <a href='https://www.diekeure.be/fr-be/professional/9290/be-prepared-nr-1-2019-tijdschrift-voor-noodplanning-en-crisisbeheer-be-prepared-n-1-2019-revue-de-planification-durgence-et-de-gestion-de-crise'>(revue Be Prepared)</a> </li>
+<li>2020-01-01 Outiller la gestion de crise ? Pourquoi, comment ? <a href='https://www.diekeure.be/nl-be/professional/10030/be-prepared-nr-1-2020-tijdschrift-voor-noodplanning-en-crisisbeheer-be-prepared-n-1-2020-revue-de-planification-durgence-et-de-gestion-de-crise'>(revue Be Prepared 2020/1)</a></li>
+<li>2019-01-01 Vidéoconférence tout terrain <a href='https://www.diekeure.be/fr-be/professional/9290/be-prepared-nr-1-2019-tijdschrift-voor-noodplanning-en-crisisbeheer-be-prepared-n-1-2019-revue-de-planification-durgence-et-de-gestion-de-crise'>(revue Be Prepared 2019/1)</a> </li>
 <li>2018-10-01 Quickgrid <a href='https://www.diekeure.be/fr-be/professional/9163/be-prepared-nr-3-2018-tijdschrift-voor-noodplanning-en-crisisbeheer-be-prepared-n-3-2018-revue-de-planification-durgence-et-de-gestion-de-crise'>(revue Be Prepared)</a></li>
 <li>2017-02-03 <a href='https://docs.my-poppy.eu/Journal de 7h30 vendredi 0302.mp3'>Interview sur Vivacité</a> dans le cadre du salon Secours Expo</li>
 <li>2017-02-23 Contribution à l'article de Sandrine Mathen publié dans La Libre : <a href='https://www.lalibre.be/economie/digital/tour-d-horizon-des-applications-potentielles-pour-les-pouvoirs-locaux-une-smart-city-en-toute-securite-58a455cecd702bc31933b308'>Tour d’horizon des applications potentielles pour les pouvoirs locaux - Une smart city en toute sécurité</a></li>
