--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -3,7 +3,7 @@ permalink: /presas/
 ---
 <b>Présentations</b> 
 <ul class='class_ul'>
-	<li><a href='https://docs.my-poppy.eu/LM22_paper_Cloquet_Velghe.pdf'><b>Outils numériques régaliens et solutions des GAFAM en gestion d’urgence collective : équilibre ou tension ?</b></a> (avec Valérie Velghe), <a href='https://www.imdr.eu/offres/gestion/events_818_47679_oui-1/e-congres-lambda-mu-22.html'>IMDR, webconférence</a>, novembre 2020</li>	
+	<li><a href='https://docs.my-poppy.eu/LM22_paper_Cloquet_Velghe.pdf'><b>Outils numériques régaliens et solutions des GAFAM en gestion d’urgence collective : équilibre ou tension ?</b></a> (avec Valérie Velghe), <a href='https://www.imdr.eu/offres/gestion/events_818_47679_oui-1/e-congres-lambda-mu-22.html'>IMDR, webconférence</a>, novembre 2020 (<a href='https://vimeo.com/477458411#t=158s'>video</a>)</li>	
 <li><a href="https://docs.my-poppy.eu/201904_secours_expo_QGIS.pdf"><b>QGIS pour les services de secours</b></a>, <a href="http://www.rescue-week.com/accueil.html">Rescue Week</a>, Paris, 6 avril 2019</li>
 <li><a href="https://docs.my-poppy.eu/201903_begeo_track_6_osgeo_christophe_cloquet.pdf"><b>Outils libres : aussi pour les entreprises !</b></a>, <a href='https://begeo2019.be/fr/track-6'>Be Geo 2019</a>, Bruxelles, 19 mars 2019</li>
 <li><a href='https://docs.my-poppy.eu/20181203_carto_101_charles_peguy_pour_diffusion.pdf'><b>Cartographie évènementielle</b></a> Institut Charles Péguy, Louvain-la-Neuve, décembre 2018</li>
