--- a/_pages/presas.html
+++ b/_pages/presas.html
@@ -30,6 +30,7 @@ permalink: /presas/
 <br>
 <b>Presse</b> 
 <ul>
+	<li>2021-02-15 La ventilation, élément incontournable du futur déconfinement? <a href='https://plus.lesoir.be/355179/article/2021-02-15/la-ventilation-element-incontournable-du-futur-deconfinement'>article de Cécile Danjou dans Le Soir</a></li>
 <li>2020-01-01 Outiller la gestion de crise ? Pourquoi, comment ? <a href='https://www.diekeure.be/nl-be/professional/10030/be-prepared-nr-1-2020-tijdschrift-voor-noodplanning-en-crisisbeheer-be-prepared-n-1-2020-revue-de-planification-durgence-et-de-gestion-de-crise'>(revue Be Prepared 2020/1)</a></li>
 <li>2019-01-01 Vidéoconférence tout terrain <a href='https://www.diekeure.be/fr-be/professional/9290/be-prepared-nr-1-2019-tijdschrift-voor-noodplanning-en-crisisbeheer-be-prepared-n-1-2019-revue-de-planification-durgence-et-de-gestion-de-crise'>(revue Be Prepared 2019/1)</a> </li>
 <li>2018-10-01 Quickgrid <a href='https://www.diekeure.be/fr-be/professional/9163/be-prepared-nr-3-2018-tijdschrift-voor-noodplanning-en-crisisbeheer-be-prepared-n-3-2018-revue-de-planification-durgence-et-de-gestion-de-crise'>(revue Be Prepared)</a></li>
